--- a/utlity.css
+++ b/utlity.css
@@ -164,3 +164,13 @@ html{
 .text-white{
     color: #ffffff;
 }
+.bg-white{
+    background-color: #ffffff;
+}
+.wt1{
+    width: 50px;
+}
+.wt2{
+    width: 60px;
+}
+
