--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ a{
    
     font-size: 20px;
     font-weight: 300;
+    font-family: 'Apercu';
 }
 
 .franchise{
@@ -28,6 +29,7 @@ a{
     padding: 15px 25px;
     border-radius: 25px;
     font-size: 17px;
+    font-family: 'Apercu';  
 }
 .order-btn{
     background-color: #ed1c24;
@@ -36,6 +38,7 @@ a{
     padding: 15px 25px;
     border-radius: 25px;
     font-size: 18px;
+    font-family: 'Apercu';  
 }
 .arrow-icon{
     color: #ed1c24;
@@ -46,50 +49,32 @@ a{
 }
 /* navbar ended */
 
-/* container started */
+/* main_container started */
 .container-img{
     width: 100%;
 
 }
- /* carousel-items start */
-.carousel-items{
-
-}
-.container{
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    margin: 30px;
-    border: 2px solid red;
-    text-align: center;
-    word-spacing: 6pxpx;
-    letter-spacing: 5px;
-   
-}
-.main_custom_headind{
-    word-spacing: 10px;
-    letter-spacing: 2px;
-    /* border: 20px solid black; */
-
-}
-
 span.logo-text-hold{
+    
     font-family: 'futurak';
     font-style: normal;
     font-weight: 400;
     font-size: 52px;
     line-height: 62px;
     color: #FFFFFF;
+    justify-content: center;
+    /* padding: 20px; */
 }
 .font-size1{
-    font-size: 14px;
+    font-size: 19px;
+    display: flex;
+    justify-content: center;
 }
 .image{
-    display: flex;
-       justify-content: space-evenly;
-       /* background-color: #FFFFFF; */
-       padding: 15px;
-       margin-left: 14px;
+     display: flex;
+    justify-content: space-around;
+    padding: 3px;
+    margin: 2px;
 }
 .one{
     background-color: #FFFFFF;
@@ -97,15 +82,780 @@ span.logo-text-hold{
 }
 .orders{
     display: flex;
-    justify-content: space-evenly;
-    margin-left: 25px
+    justify-content: space-around;
+    /* margin-left: 25px */
+    padding: px;
+    margin: 25px;
 }
 .order_btn{
     background-color: gray;
     color: #ffffff;
     border: none;
     padding: 15px 25px;
-    border-radius: 15px;
-    font-size: 10px;
+    border-radius: 12px;
+    font-size: 11px;
+    padding: 15px;
+    font-family: 'Apercu';  
+    
+}
+
+.main_custom_headind{
+    align-items: center;
+    display: flex;
+    flex-wrap: wrap;
+    word-spacing: 10px;
+    letter-spacing: 2px;
+     /* border: 20px solid rgb(168, 16, 16);  */
+    padding: 20px;
+    font-family: 'Apercu'; 
+    
+
+}
+
+.franchise-home-box-content small{
+    font-family: 'apercu';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 20px;
+    padding-left: 100px;
+    letter-spacing: 0.48em;
+    text-transform: uppercase;
+    color: #ED1C24;
+    margin-bottom: 8px;
+    display: block;
+
+}
+.franchise-home-box-content,span.logo-text-hold-second{
+    font-family: 'futurak';
+    font-style: normal;
+    font-weight: 400px;
+    font-size: 32px;
+    line-height: 29px;
+    padding-left: 100px;
+    text-align: center;
+    color: #FFFFFF;
+}
+/* main_container end */
+
+ /* carousel-items start */
+.container{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    margin: 30px;
+    /* border: 2px solid red; */
+    text-align: center;
+    /* word-spacing: 6pxpx;
+    letter-spacing: 5px; */
+   
+}
+.inner-container{
+    width: 1200px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 4rem;
+}
+.left-side{
+    width: 550px;
+    height: 400px;
+    /* background-color: green; */
+    text-align: left;
+margin: auto;
+    
+}
+.style-font{
+    font-size: 20px;
+    letter-spacing: 0.48rem;
+    color: red;
+}
+
+.left-side h2{
+    font-size: 3rem;
+    font-family: 'futurak', sans-serif;
+    margin-top: 1.7rem;
+}
+.left-side p{
+    font-size: 15px;
+    margin-top:2rem;
+}
+p.second-para{
+    margin-top:8px;
+}
+.direction-button{
+    margin-top: 5rem !important;
+    
+}
+button.direction-button {
+    width: 152px;
+    height: 44px;
+    border-radius: 50px;
+    border: none;
+    font-size: 15px;
+    background-color: 
+}
+
+.right-side{
+    width: 550px;
+    height: 400px;
+
+}
+.right-img{
+    width: 450px;
+    height: 270px;
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+    border-radius: 10px;
+    margin-right: 30px;
+}
+
+.left-img1{
+    width: 450px;
+    height: 270px;
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+    border-radius: 10px;
+    margin-left: 90px;
+}
+ .inner-container1{
+    gap: 200px;
+    width: 1200px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: -8rem;
+}
+.left-side1 p{
+    font-size: 15px;
+    margin-top:2rem;
+}
+
+.left_side1{
+    width: 550px;
+    height: 400px;
+}
+.right-side1{
+    width: 550px;
+    height: 400px;
+    /* background-color: green; */
+     text-align: left;
+     /* margin: auto; */
+}
+.style-font1{
+    font-size: 20px;
+    letter-spacing: 0.48rem;
+    color: red;
+}
+.right-side1 h2{
+    font-size: 3rem;
+    font-family: 'futurak', sans-serif;
+    margin-top: 1.7rem;
+}
+.right-side1 p{
+    font-size: 15px;
+    margin-top:2rem;
+}
+p.second-para{
+    margin-top:8px;
+}
+.inner-container2{
+    gap: 200px;
+    width: 1200px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: -8rem;
+    margin-left: 90px;
+}
+.right-img2{
+      margin-right: 110px;
+      width: 450px;
+      height: 270px;
+      background-size: cover;
+      background-position: center center;
+      background-repeat: no-repeat;
+      border-radius: 10px;
+      /* margin-left: 90px; */
+}
+
+/* carousel-items end */
+
+/* /* second_franchise_start * */
+
+.second_franchie {
+    margin-top: -8rem;
+    /* margin: 30px; */
+
+}
+.Express_Franchises{
+    display: flex;
+    justify-content: space-around;
+    font-size: 14px;
+    font-weight: 300;
+    font-family: apercu;
+    line-height: 24px;
+}
+.Express_Franchises img{
+    width:300px ;
+   margin-left: 20px;
+}
+.Express_Franchises1 h2{
+    font-size: 20px;
+    text-align: center;
+    margin-top: 15px;
+}
+.Express_contant{
+    display: flex;
+    justify-content: center;
+   font-size: 20px;
+   letter-spacing: 6px;
+   color: #ED1C24;
+   padding: 1px;
+
+}
+.Express_Franchises p {
+        /* text-align: center; */
+       font-size: 15px;
+       margin-top: 1rem; 
+}
+.Express_Franchises2 h2{
+    font-size: 20px;
+    text-align: center;
+    margin-top: 15px;
+}
+.Express_Franchises3 h2{
+    font-size: 20px;
+    text-align: center;
+    margin-top: 15px;
+}
+.Express_Franchises_second{
+    display: flex;
+    justify-content: space-around;
+    gap: 20px;
+    margin: 25px;
+}
+.Express_Franchises_second img{
+    width: 300px;
+}
+.Express_Franchises_second h2{
+    font-size: 20px;
+    text-align: center;
+    margin-top: 15px;
+}
+.Express_Franchises_second p{
+    font-size: 15px;
+       margin-top: 1rem; 
+}
+.Express_second3 img{
+    width: 350px;
+    height: 210px;
+}
+.Express_Franchises_third{
+    display: flex;
+    justify-content: space-around;
+    gap: 20px;
+    margin: 25px;
+}
+.Express_Franchises_third img{
+    width: 300px;
+}
+.Express_Franchises_third h2{
+    font-size: 20px;
+    text-align: center;
+    margin-top: 15px;
+}
+.Express_Franchises_third p{
+    font-size: 15px;
+    margin-top: 1rem;
+}
+.Express_Franchises_fourth{
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    margin: 25px;
+}
+.Express_Franchises_fourth img{
+    width: 300px;
+}
+.Express_Franchises_fourth h2{
+    font-size: 20px;
+    text-align: center;
+    margin-top: 15px;
+}
+.Express_Franchises_fourth p{
+    font-size: 15px;
+    margin-top: 1rem;
+}
+/* exprress_franchies_end */
+.main_viallge{
+    /* border: 2px solid red; */
+    width: 100%;
+    background-color: #0f0f0f;
+    /* margin: 50px; */
+    padding: 30px;
+}
+.Village_Franchise1{
+    margin: 30px;
+    display: flex;
+    justify-content: center;
+
+}
+.Village_Franchise{
+    display: flex;
+    /* justify-content: center; */
+    gap: 20px;
+
+}
+.Village_Franchise img{
+    width: 600px;
+    height: 300px;
+}
+.Village_Franchise h2{
+    font-size: 20px;
+    text-align: center;
+    margin-top: 30px;
+}
+.Village_Franchise p{
+    font-size: 15px;
+    margin-top: 3rem;
+}
+.Opening_soon{
+    
+    /* border: 2px solid red; */
+    width: 100%;
+}
+.Openging_franchies{
+    margin: 30px;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+.mini_open_contanier{
+    display: flex;
+    justify-content: space-evenly;
+    /* gap: 20px; */
+    flex-wrap: wrap;
+}
+.dha_soon{
+    /* border: 3px solid green; */
+    width: 300px;
+    height: 210px;
+    background-color: white;
+    border-radius: 6px;
+    color: #0f0f0f;
+}
+.open_soon{
+    display: flex;
+    justify-content: center;
+   font-size: 10px;
+   flex-wrap: wrap;
+   /* letter-spacing: 6px; */
+   color: #ED1C24;
+   padding: 20px ;
+   flex-wrap: wrap  ;   
+}
+.dha_soon h2{
+    font-size: 20px;
+    text-align: center;
+    margin-top: 1px;
+}
+.dha_soon p{
+    text-align: center;
+    font-size: 15px;
+    margin-top: 1rem;
+    font-weight: bolder;
+}
+
+.behira_open{
+    /* border: 3px solid green; */
+    width: 300px;
+    height: 210px;
+    background-color: white;
+    border-radius: 6px;
+    color: #0f0f0f;
+
+}
+.behira_open h2{
+    font-size: 20px;
+    text-align: center;
+    margin-top: 1px; 
+}
+.behira_open p{
+    text-align: center;
+    font-size: 15px;
+    margin-top: 1rem;
+    font-weight: bolder
+}
+.Rawalpindi{
+    /* border: 3px solid green; */
+    width: 300px;
+    height: 210px;
+    background-color: white;
+    border-radius: 6px;
+    color: #0f0f0f;
+}
+.Rawalpindi h2{
+    font-size: 20px;
+    text-align: center;
+    margin-top: 1px; 
+}
+.Rawalpindi p{
+    text-align: center;
+    font-size: 15px;
+    margin-top: 1rem;
+    font-weight: bolder
+}
+.mini_second_opening{
+    display: flex;
+    justify-content: space-evenly;
+    gap: 30px;
+    padding: 30px;
+    flex-wrap: wrap;
+}
+.Gujranwala{
+    /* border: 3px solid green;  */
+     width: 300px;
+    height: 210px;
+    background-color: white;
+    border-radius: 6px;
+    color: #0f0f0f;
+}
+.Gujranwala h2{
+    font-size: 20px;
+    text-align: center;
+    margin-top: 1px; 
+    
+}
+.Gujranwala p{
+    text-align: center;
+    font-size: 15px;
+    margin-top: 1rem;
+    font-weight: bolder;
+}
+
+.Sialkot{
+    /* border: 3px solid green; */
+    width: 300px;
+    height: 210px;
+    background-color: white;
+    border-radius: 6px;
+    color: #0f0f0f;
+}
+.Sialkot h2{
+    font-size: 20px;
+    text-align: center;
+    margin-top: 1px; 
+}
+.Sialkot p{
+    text-align: center;
+    font-size: 15px;
+    margin-top: 1rem;
+    font-weight: bolder;
+}
+.Sharqpur{
+    /* border: 3px solid green; */
+    width: 300px;
+    height: 210px;
+    background-color: white;
+    border-radius: 6px;
+    color: #0f0f0f;
+}
+.Sharqpur h2{
+    font-size: 20px;
+    text-align: center;
+    margin-top: 1px; 
+}
+.Sharqpur p{
+    text-align: center;
+    font-size: 15px;
+    margin-top: 1rem;
+    font-weight: bolder;
+}
+
+.mini_third_0pen{
+    display: flex;
+    justify-content: center;
+    /* gap: 20px; */
+    /* padding: 30px; */
+}
+.Burewala{
+    width: 300px;
+    height: 210px;
+    background-color: white;
+    border-radius: 6px;
+    color: #0f0f0f; 
+}
+.Burewala h2{
+    font-size: 20px;
+    text-align: center;
+    margin-top: 1px;
+}
+
+.Burewala p{
+    text-align: center;
+    font-size: 15px;
+    margin-top: 1rem;
+    font-weight: bolder;
+}
+ .media{
+    /* border: 2px solid red; */
+    width: 100%;
+ }
+ .socail_content{ 
+    display: flex;
+   justify-content: center;
+   font-size: 20px;
+   letter-spacing: 3px;
+    color: white;
+   padding: 20px;
+ }
+ .social_feed{
+    margin: 30px;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+ }
+ .main_media{
+    display: flex;
+    gap: 12px;
+    flex-wrap: wrap;
+    box-sizing: border-box;
+}
+.main_media img{
+    width: 250px;
+}
+.last_section{
+    display: flex;
+    justify-content: start;
+    margin: 30px;
+
+}
+.meida_lago{
+    /* border: 3px solid green; */
+    width: 400px;
+    height: 270px;
+}
+.meida_lago img{
+    width: 150px;
+}
+.pera_section{
+    margin: 0px !important;
+    padding-bottom: 24px;
+    padding-right: 0px;
+    text-align: left;
+    font-family: 'Apercu';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 21px;
+    letter-spacing: 0.03em;
+    color: #ffffffb3;
+    padding: 10px;
+}
+.term{
+    font-size: 15px;
+     margin: 0px !important;
+    padding-bottom: 24px;
+    padding-right: 0px;
+    text-align: left;
+    font-family: 'Apercu';
+    font-style: normal;
+    font-weight: 400;   
+    line-height: 21px;
+    letter-spacing: 0.03em;
+    color: #ffffffb3;
+    padding: 10px;
+    
+}
+.site{
+    display: flex;
+   justify-content: center;
+   font-size: 15px;
+   letter-spacing: px;
+   color: #ffffffb3;
+   padding: 2px;
+   padding-bottom: 16px;
+    font-family: 'Apercu';
+}
+.site_links {
+    /* border: 3px solid green; */
+    margin-left: 20px;
+    width: 250px;
+    
+
+} 
+.site_links ul {
+    padding: 20px;
+    text-decoration: none;
+    font-size: 15px;
+    display: flex;
+    /* justify-content: baseline; */
+    flex-direction: column  ;
+    /* gap: 20px; */
+    color: #ffffffb3;
+    
+    
+
+}
+   
+.site_content li {
+    list-style: none;
+    display: flex;
+    align-items: center;
+    gap: 0px 5px;
+    padding-bottom: 16px;
+    font-family: 'Apercu';
+    color: #ffffffb3;  
+}
+.site_content li a{
+    font-family: 'Apercu';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 20px;
+    letter-spacing: 0.03em;
+    color: rgba(255, 255, 255, 0.7) !important;
+} 
+
+.footer_contect li{
+    list-style: none;
+    display: flex;
+    align-items: center;
+    gap: 0px 5px;
+    padding-bottom: 16px;
+    font-family: 'Apercu';
+    color: #ffffffb3; 
+}
+
+.footer_contect li a{
+    font-family: 'Apercu';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 20px;
+    letter-spacing: 0.03em;
+    color: rgba(255, 255, 255, 0.7) !important;
+}
+.contect_us{
+    /* border: 3px solid green; */
+    margin-left: 20px;
+    width: 280px;
+}
+.contect_us ul{
+    padding: 20px;
+    text-decoration: none;
+    font-size: 15px;
+    display: flex;
+    /* justify-content: baseline; */
+    flex-direction: column  ;
+    /* gap: 20px; */
+    color: #ffffffb3;
+}
+/* home_page_end */
+
+/* about_page_start */
+.main_intro{
+     /* border: 3px solid red; */
+     width: 100%; 
+    height: 350px;
     padding: 20px;
 }
+.mini_intro{
+    text-align: center;
+    font-family: 'butler';
+    font-style: normal;
+    font-size: 22px;
+    line-height: 46px;
+    color: #FFFFFF;
+    margin-bottom: 32px;
+}
+.intro_pera{
+    display: flex;
+    justify-content: center;
+
+
+}
+.intro_pera p{
+    font-family: 'apercu';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 21px;
+    letter-spacing: 0.03em;
+    color: rgba(255, 255, 255, 0.7);
+    margin-bottom: 15px;
+    text-align: center;
+}
+.p {
+ display: flex;
+ justify-content: center;
+}
+.p p{
+    font-family: 'apercu';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 21px;
+    letter-spacing: 0.03em;
+    color: #ffffffb3;   
+    margin-bottom: 15px;
+    text-align: center;
+}
+.restu_pera{
+    margin-top: -7rem;
+    padding: 12px;
+}
+.state_pera p{
+    
+    font-family: 'Apercu';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 18px;
+    letter-spacing: 0.03em;
+    color: rgba(255, 255, 255, 0.7);
+    margin-bottom: 10px;
+}
+.right-side img{
+    width: 100%;
+    border-radius: 4px;
+}
+.left_side1 img{
+    width: 100%;
+    border-radius: 4px;
+}
+.state_pera h2{
+ font-family: 'Apercu';
+}
+.three_med{
+margin: 15px;
+
+}
+.mid_contect{
+display: flex;
+justify-content: center;
+font-style: normal;
+font-weight: 500;
+font-size: 20px;
+line-height: 38px;
+color: #FFFFFF;
+padding: 12px;
+margin-top: -6rem;
+}
+.food_lover{
+    margin-top: -9rem;
+}
+.food_one img{
+    width: 110%;
+    height: 320px;
+}
+
+
+
+
+
+
+
